--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,10 +10,15 @@ activityCompose = "1.10.1"
 composeBom = "2024.04.01"
 appcompat = "1.6.1"
 firebaseBom = "33.10.0"
-
-
+androidx-fragment-ktx = "1.6.2"
+navigationFragmentKtxVersion = "2.8.9"
+constraintlayout = "2.2.1"
+navigationUiKtxVersion = "2.8.9"
+ksp = "2.0.0-1.0.21"
+media3CommonKtx = "1.5.1"
 
 [libraries]
+glide = { module = "com.github.bumptech.glide:glide", version = "4.16.0" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
@@ -33,10 +38,19 @@ firebase-auth = { group = "com.google.firebase", name = "firebase-auth-ktx" }
 firebase-database = { group = "com.google.firebase", name = "firebase-database-ktx" }
 firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore-ktx" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
-
+androidx-fragment-ktx = { module = "androidx.fragment:fragment-ktx", version.ref = "androidx-fragment-ktx" }
+androidx-navigation-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigationFragmentKtxVersion" }
+androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+androidx-fragment = { group = "androidx.fragment", name = "fragment", version.ref = "androidx-fragment-ktx" }
+androidx_navigation_ui_ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigationUiKtxVersion" }
+androidx-room-ktx = { group = "androidx.room", name = "room-ktx", version = "2.5.2" }
+androidx-room-common = { group = "androidx.room", name = "room-common", version = "2.5.2" }
+androidx-room-runtime = { group = "androidx.room", name = "room-runtime", version = "2.5.2" }
+androidx-room-compiler = { group = "androidx.room", name = "room-compiler", version = "2.5.2" }
+androidx-media3-common-ktx = { group = "androidx.media3", name = "media3-common-ktx", version.ref = "media3CommonKtx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
-
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
