--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,6 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+CLOUDINARY_CLOUD_NAME=dea0wkuvq
+CLOUDINARY_API_KEY=135922264553169
+CLOUD_UNSIGNED_PRESET=travel_app_unsigned
