--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,6 +21,9 @@ glideCompiler = "4.15.0"
 firebaseStorageKtx = "21.0.1"
 cloudinary = "3.0.2"
 navigation = "2.7.7"
+playServicesCastTv = "21.1.1"
+okhttp = "4.9.2"
+
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -58,7 +61,11 @@ firebase-storage-ktx = { group = "com.google.firebase", name = "firebase-storage
 cloudinary = { module = "com.cloudinary:cloudinary-android", version.ref = "cloudinary" }
 navigation-fragment = { module = "androidx.navigation:navigation-fragment", version.ref = "navigation" }
 navigation-ui = { module = "androidx.navigation:navigation-ui", version.ref = "navigation" }
-
+play-services-cast-tv = { group = "com.google.android.gms", name = "play-services-cast-tv", version.ref = "playServicesCastTv" }
+okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
+retrofit = { module = "com.squareup.retrofit2:retrofit", version = "2.9.0" }
+logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
+gson = { module = "com.google.code.gson:gson", version = "2.8.8" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
