--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,6 +24,7 @@ navigation = "2.5.0"
 playServicesCastTv = "21.1.1"
 okhttp = "4.9.2"
 carUiLib = "2.6.0"
+runner = "1.6.1"
 
 
 [libraries]
@@ -69,6 +70,7 @@ logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", ver
 gson = { module = "com.google.code.gson:gson", version = "2.8.8" }
 car-ui-lib = { group = "com.android.car.ui", name = "car-ui-lib", version.ref = "carUiLib" }
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
+androidx-runner = { group = "androidx.test", name = "runner", version.ref = "runner" }
 
 
 
